[tool.poetry]
name = "python-for-data-science"
version = "0.1.0"
description = "Test init"
authors = ["jfmcdowell"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^5.4.3"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
